# toolbox

./: README.md
apt/: apt_with_socks_proxy.md
automatic_updates/: debian_unattended_upgrades.md
cmakeBootstrap/: .gitignore  README.md  dependencies.txt
cmakeBootstrap/app_using_library/: main.cpp
cmakeBootstrap/shared_library/: CMakeLists.txt
cmakeBootstrap/static_library/inc/: Car.h
cmakeBootstrap/static_library/src/: Car.cpp
cmake_bootstrap/: README.md
cmake_bootstrap/app_using_library/: CMakeLists.txt
cmake_bootstrap/standalone/: CMakeLists.txt
cmake_bootstrap/static_library/: CMakeLists.txt
email/: server_email_config.md
git/: commitSquashExample.md  commitToOtherForkBranch.md  rebaseExample.md
hardening/web/: content-security-policy.md  hsts.md  permissions-policy.md  referrer-policy.md  x-content-type-options.md  x-frame-options.md
media/: hw_video_accel_fedora.md  opus.md
port_forwarder/: readme.md  setup.md
port_forwarder/systemd/: portforwarder.service
python/: venv_example.md
storage/: drive_health_monitoring.md  newdriveadd.md
systemd/: example.service  readme.md
tor/: tor_install_example.md
vim/: .vimrc
